# sdl-conways-game-of-life

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
include/life/: SDL_Utils.hpp  mouse.hpp
src/: CMakeLists.txt  SDL_Utils.cpp  SDL_Utils.hpp  cell.c  cell.cpp  cell.h  cell.hpp  colony.cpp  colony.hpp  game.cpp  game.hpp  main.c  main.cpp  mouse.cpp  mouse.hpp
test/: CMakeLists.txt  cell_test.c  cell_test.cpp  colony_test.cpp  game_test.cpp  imgui_test.cpp  mouse_input_test.cpp  mouse_test.cpp  my_imgui_test.cpp  render_cell.cpp
